force-app/main/default/objects/Campaign_Report__c/Campaign_Report__c.object-meta.xml
<CustomObject>
    <description>Campaign report created automatically by BookingNinjas.email</description>
    <label>Campaign Activity</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>