force-app/main/default/objects/Campaign_Report__c/fields/Account_Continent__c.field-meta.xml
<CustomField>
    <fullName>Account_Continent__c</fullName>
    <formula>Text(Contact__r.Account.Continent__c )</formula>
    <label>Account Continent</label>
    <type>Text</type>
</CustomField>