force-app/main/default/objects/Campaign_Report__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>