force-app/main/default/objects/Campaign_Report__c/fields/Acct_Type__c.field-meta.xml
<CustomField>
    <fullName>Acct_Type__c</fullName>
    <formula>TEXT(Contact__r.Account.Type)</formula>
    <label>Acct Type</label>
    <type>Text</type>
</CustomField>