force-app/main/default/objects/Campaign_Report__c/fields/Contact_Quality__c.field-meta.xml
<CustomField>
    <fullName>Contact_Quality__c</fullName>
    <label>Contact Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Soft Bounce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>