force-app/main/default/objects/Campaign_Report__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>Text(Contact__r.Status__c)</formula>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>