force-app/main/default/objects/Campaign_Report__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Contact__r.Account.Industry)</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>