force-app/main/default/objects/Campaign_Report__c/fields/LinkedIn_Status__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Status__c</fullName>
    <formula>TEXT(Contact__r.Linkedin_Activity__c)</formula>
    <label>LinkedIn Status</label>
    <type>Text</type>
</CustomField>