force-app/main/default/objects/Campaign_Report__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <formula>Contact__r.LinkedIN__c</formula>
    <label>LinkedIn URL</label>
    <type>Text</type>
</CustomField>