force-app/main/default/objects/Campaign_Report__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>IF( Total_Open__c &gt; 4, &quot;Hot&quot;,
IF( Total_Open__c &gt; 3 ,&quot;Super Warm&quot;,
IF( Total_Open__c &gt; 1, &quot;Warm&quot;,
&quot;Cold&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>