force-app/main/default/objects/Campaign_Report__c/fields/Position_Level__c.field-meta.xml
<CustomField>
    <fullName>Position_Level__c</fullName>
    <formula>TEXT( Contact__r.Levels__c )</formula>
    <label>Position Level</label>
    <type>Text</type>
</CustomField>