force-app/main/default/objects/Campaign_Report__c/fields/Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Quality_Description__c</fullName>
    <label>Quality Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>