force-app/main/default/objects/Campaign_Report__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>This is for Report Purpose Only to avoid duplicate email address</description>
    <label>Report ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>