force-app/main/default/objects/Campaign_Report__c/fields/Total_Click__c.field-meta.xml
<CustomField>
    <fullName>Total_Click__c</fullName>
    <label>Total Click</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>