force-app/main/default/objects/Campaign_Report__c/fields/Total_Open__c.field-meta.xml
<CustomField>
    <fullName>Total_Open__c</fullName>
    <label>Total Open</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>