force-app/main/default/objects/Campaign_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Contact_Quality__c</columns>
    <columns>Quality_Description__c</columns>
    <columns>Total_Open__c</columns>
    <columns>Total_Click__c</columns>
    <columns>Title__c</columns>
    <columns>LinkedIn_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>