force-app/main/default/objects/Campaign_Report__c/listViews/Hard_Bounce.listView-meta.xml
<ListView>
    <fullName>Hard_Bounce</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Title__c</columns>
    <columns>Campaign_Date__c</columns>
    <columns>Contact_Quality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Quality__c</field>
        <operation>equals</operation>
        <value>Hard Bounce</value>
    </filters>
    <label>Hard Bounce</label>
</ListView>