force-app/main/default/objects/Campaign_Report__c/listViews/Super_warm_Plus.listView-meta.xml
<ListView>
    <fullName>Super_warm_Plus</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Total_Click__c</columns>
    <columns>Total_Open__c</columns>
    <columns>Contact_Quality__c</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Open__c</field>
        <operation>greaterThan</operation>
        <value>3</value>
    </filters>
    <label>Super warm Plus</label>
</ListView>