force-app/main/default/objects/Campaign_Report__c/listViews/This_week.listView-meta.xml
<ListView>
    <fullName>This_week</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Campaign_Date__c</columns>
    <columns>Total_Click__c</columns>
    <columns>Total_Open__c</columns>
    <columns>Title__c</columns>
    <columns>Quality_Description__c</columns>
    <columns>Contact_Quality__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/13/2020 12:00 AM</value>
    </filters>
    <label>This week</label>
</ListView>